<resources>
    <string name="app_name">Gymnasium Haren</string>

    <string name="title_section1">Vertretungsplan</string>
    <string name="title_section2">Stundenplan</string>
    <string name="title_section3">Schulausfälle</string>
    <string name="title_section4">Hauptseite</string>
    <string name="title_section5">Termine</string>
    <string name="title_section6">Verwaltung</string>
    <string name="title_section7">Pressespiegel</string>
    <string name="title_section8">Fächer</string>
    <string name="title_section9">Soziales Lernen</string>
    <string name="title_section10">AGs</string>
    <string name="title_section11">Schüler</string>
    <string name="title_section12">Berufs- und Studienorientierung</string>
    <string name="title_section13">Eltern</string>
    <string name="title_section14">Grundschuleltern</string>
    <string name="title_section15">Kollegium</string>
    <string name="title_section16">Partnerschulen</string>
    <string name="title_section17">Mensa</string>
    <string name="title_section18">Förderverein</string>
    <string name="title_section19">Links</string>
    <string name="title_section20">Über diese App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example"></string>

    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="preference_class">Klasse (Zahl und Kleinbuchstabe, z.B. "10d")</string>
    <string name="preference_class_key">class</string>
    <string name="preference_class_default" />
    <string name="preference_benutzer">Benutzername  (für Pläne)</string>
    <string name="preference_benutzer_key">user</string>
    <string name="preference_benutzer_default">student</string>
    <string name="preference_pass">Passwort (für Pläne)</string>
    <string name="preference_pass_key">pass</string>
    <string name="preference_pass_default" />
    <string name="preference_lehrermodus_title">Lehrermodus</string>
    <string name="preference_lehreremodus_key">lehrer</string>
    <string name="preference_indizemodus_summary">(für die Pläne)</string>
    <string name="preference_push_title">Push-Nachrichten</string>
    <string name="preference_push_key">push</string>
    <string name="preference_push_summary">Sollen Push-Nachrichten empfangen werden?</string>
    <string name="preference_pushd_title">Entwickler Tag</string>
    <string name="preference_pushd_key">pushd</string>
    <string name="preference_pushd_summary">Entwickler Tag hinzufügen für Push-Nachrichten?</string>
    <string name="allgemeine_preferences">Allgemeine Einstellungen</string>
    <string name="anmelde_preferences">Anmeldeinformationen</string>
    <string name="title_screen_preference">Anmeldeinformationen</string>
    <string name="summary_screen_preference">Hier werden die Anmeldeinformationen festgelegt</string>
    <string name="preference_version">version</string>
</resources>
