<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="all_preference"
    android:title="@string/title_all_preference"
    android:summary="@string/summary_all_preference">

    <PreferenceCategory
        android:title="@string/allgemeine_preferences">

        <EditTextPreference
            android:title="@string/preference_class"
            android:key="@string/preference_class_key"
            android:defaultValue="@string/preference_class_default"
            android:inputType="textMultiLine" />
        <CheckBoxPreference
            android:title="@string/preference_push_title"
            android:key="@string/preference_push_key"
            android:defaultValue="true"
            android:summary="@string/preference_push_summary" />
        <CheckBoxPreference
            android:title="@string/preference_push_title"
            android:key="@string/preference_push_key"
            android:defaultValue="true"
            android:summary="@string/preference_push_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/anmelde_preferences">
        <PreferenceScreen
            android:key="screen_preference"
            android:title="@string/title_screen_preference"
            android:summary="@string/summary_screen_preference">

            <CheckBoxPreference
                android:title="@string/preference_lehrermodus_title"
                android:key="@string/preference_lehreremodus_key"
                android:defaultValue="false"
                android:summary="@string/preference_indizemodus_summary" />
            <EditTextPreference
                android:title="@string/preference_benutzer"
                android:key="@string/preference_benutzer_key"
                android:defaultValue="@string/preference_benutzer_default"
                android:inputType="text" />
            <EditTextPreference
                android:title="@string/preference_pass"
                android:key="@string/preference_pass_key"
                android:defaultValue="@string/preference_pass_default"
                android:inputType="textPassword" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>